ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    ingress.kubernetes.io/rewrite-target: /
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"alb.ingress.kubernetes.io/scheme":"internet-facing","alb.ingress.kubernetes.io/target-type":"instance","kubernetes.io/ingress.class":"alb"},"name":"simple-ingress","namespace":"default"},"spec":{"rules":[{"host":"foo.jomo.click","http":{"paths":[{"backend":{"service":{"name":"nginx-deployment","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}]}}
    kubernetes.io/ingress.class: alb
  creationTimestamp: "2023-06-09T09:11:30Z"
  generation: 2
  name: simple-ingress
  namespace: default
  resourceVersion: "486980"
  uid: f1a5ea07-cc6c-4463-ac13-48ceab93f55d
spec:
  ingressClassName: nginx
  rules:
  - host: foo.jomo.click
    http:
      paths:
      - backend:
          service:
            name: nginx-deployment
            port:
              number: 80
        path: /
        pathType: Prefix
